feat: Scoped Values